welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: expected start of definition
override def run() {
         ^SnakeBuggle:31: error: Unmatched closing brace '}' ignored here
}
^